Forgot Password Added

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "firebase-admin": "^11.9.0",
     "mongoose": "^8.3.4",
     "next": "14.2.14",
-    "nodemailer": "^6.9.13",
-    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemailer": "^6.9.15",
     "papaparse": "^5.4.1",
     "pdfjs-dist": "^3.4.120",
     "react": "^18",
@@ -47,6 +46,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
