--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rsuite": "^5.35.1",
     "sharp": "^0.33.5",
     "swiper": "^9.4.1",
+    "telegram": "^2.26.22",
     "typed.js": "^2.1.0",
     "uuid": "^9.0.0"
   },
