--- a/package.json
+++ b/package.json
@@ -9,50 +9,51 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.4.4",
+    "@react-pdf/renderer": "^4.3.1",
     "@rooks/use-window-size": "^4.11.2",
-    "axios": "^1.4.0",
-    "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.1.1",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "^4.2.0",
     "eslint": "^8.57.1",
-    "firebase": "^10.11.1",
-    "firebase-admin": "^11.9.0",
-    "mongoose": "^8.3.4",
-    "next": "14.2.14",
-    "nodemailer": "^6.9.15",
-    "papaparse": "^5.4.1",
-    "pdfjs-dist": "^3.4.120",
-    "react": "^18",
-    "react-data-table-component": "^7.5.3",
-    "react-dom": "^18",
-    "react-icons": "^4.10.1",
-    "react-image-crop": "^8.6.12",
-    "react-loader-spinner": "^5.3.4",
+    "firebase": "^12.5.0",
+    "firebase-admin": "^13.6.0",
+    "mongoose": "^8.19.3",
+    "next": "16.0.1",
+    "nodemailer": "^7.0.10",
+    "npm-check-updates": "^19.1.2",
+    "papaparse": "^5.5.3",
+    "pdfjs-dist": "^5.4.394",
+    "react": "^19",
+    "react-data-table-component": "^7.7.0",
+    "react-dom": "^19",
+    "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
+    "react-loader-spinner": "^8.0.0",
     "react-read-pdf": "^2.0.9",
     "react-simple-image-viewer": "^1.2.2",
     "react-table": "^7.8.0",
-    "react-toastify": "^9.1.3",
-    "resend": "^3.2.0",
-    "rsuite": "^5.35.1",
-    "sharp": "^0.33.5",
-    "swiper": "^9.4.1",
+    "react-toastify": "^11.0.5",
+    "resend": "^6.4.2",
+    "rsuite": "^5.83.3",
+    "sharp": "^0.34.5",
+    "swiper": "^12.0.3",
     "telegram": "^2.26.22",
     "typed.js": "^2.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
+    "@types/bcryptjs": "^3.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "@types/node": "^24",
+    "@types/nodemailer": "^7.0.3",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1",
     "typescript": "^5"
   }
 }
