--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@msg91comm/sendotp-sdk": "^1.0.1",
     "@react-pdf/renderer": "^4.3.1",
     "@rooks/use-window-size": "^4.11.2",
     "axios": "^1.13.2",
@@ -54,6 +56,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "typescript": "^5"
   }
 }
