--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
-  ],
+, "src/app/api/verifyMobileOTP/route.js", "src/app/api/sendMobileOTP/route.js"  ],
   "exclude": [
     "node_modules"
   ]
