--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "patch-package": "^8.0.1",
